chore: fix overflow issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -96,7 +96,6 @@
 }
 
 html {
-  padding: 0 !important;
   overflow-y: scroll !important;
 }
 
